--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#certificate">Certificate</a></li>      
+
         </ul>
     </nav>
 
@@ -38,7 +40,7 @@
                 <h1>Hi, I am <span>Nishant Singhal</span> <br>Find Insight and trends.</h1>
                 <div class="buttons">
                     <a href="https://https://www.linkedin.com/in/nishant-singhal-DA/" class="btn primary">Linkedin</a>
-                    <a href="NISHANT SINGHAL - Resume.pdf" class="btn outline" download>Download CV</a>
+                    <a href=""Nishant Singhal DA.pdf" class="btn outline" download>Download CV</a>
                 </div>
             </div>
             <div class="hero-right">
@@ -202,6 +204,19 @@
                 <div class="level-label">70%</div>
             </div> -->
         </div>
+         <section id="certificates">
+  <h2>Certificates</h2>
+  <ul>
+     <li><a href="https://leetcode.com/medal/?showImg=0&id=4142916&isLevel=false" target="_blank"> SQL (50) LeetCode </a></li>
+     <li><a href="https://www.hackerrank.com/certificates/iframe/775a09b14702" target="_blank"> SQL-Intermediate (HackerRank) </a></li>
+    <li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/9PBTqmSxAf6zZTseP/io9DzWKe3PTsiS6GG_9PBTqmSxAf6zZTseP_cHoXJNJR38gfhFLcv_1751429212651_completion_certificate.pdf" target="_blank">Data Analytics Certificate - Deloitte </a></li>
+
+     <li><a href="https://www.hackerrank.com/certificates/iframe/67bae169ba80" target="_blank">Problem Solving-Basic (HackerRank) </a></li>
+    <li><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/ifobHAoMjQs9s6bKS/gMTdCXwDdLYoXZ3wG_ifobHAoMjQs9s6bKS_cHoXJNJR38gfhFLcv_1751430190923_completion_certificate.pdf" target="_blank">GenAI Powered Data Analytics Job Simulation Tata Group </a></li>
+
+  </ul>
+</section>
+
 
 
         <!-- Project card -->
@@ -280,7 +295,14 @@
                 <div class="social-icons">
                     <a href="https://github.com/nishantsinghal2018?tab=repositories" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/nishant-singhal-DA/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    
+                     <a href="https://leetcode.com/u/Nishant70888/" target="_blank">
+                     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" 
+                    alt="LeetCode" width="25" height="25">
+                    </a>
+                    <a href="https://www.hackerrank.com/profile/nishantsinghal21" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/HackerRank_logo.png" 
+       alt="HackerRank" width="25" height="25">
+</a>
                 </div>
                 <p class="copyright">© 2025 Nishant singhal. All rights reserved.</p>
             </div>
@@ -303,5 +325,6 @@
         ScrollReveal().reveal('.about-content', { origin: 'right', distance: '50px', duration: 1000, delay: 300 });
     </script>
 </body>
+
 
 </html>
