--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1>Hi, I am <span>Nishant Singhal</span> <br>Find Insight and trends.</h1>
                 <div class="buttons">
                     <a href="https://https://www.linkedin.com/in/nishant-singhal-DA/" class="btn primary">Linkedin</a>
-                    <a href=""Nishant Singhal DA.pdf" class="btn outline" download>Download CV</a>
+                    <a href="Nishant Singhal DA.pdf" class="btn outline" download>Download CV</a>
                 </div>
             </div>
             <div class="hero-right">
@@ -328,4 +328,5 @@
 
 
 </html>
+
 
